# marine-propeller-digital-twin

./: .gitignore  README.md  demo.py  evaluate_fuelcast.py  pyproject.toml  sql_grafana_postgres_schema.sql
data/: fuelcast_combo_a_joined_sample.csv  fuelcast_cps_poseidon_preview.csv
data/Copernicus/: copernicus_sample_subset.csv
data/ERA5/: README.md
data/era5/: README.md  era5_sample_subset.csv
data/grafana/: fuelcast_baseline.json  fuelcast_metrics.csv  fuelcast_metrics_api.json
digital_twin/: __init__.py  fuelcast.py  maintenance.py  model.py
grafana/: fuelcast_dashboard_layout.md
scripts/: export_fuelcast_json_api.py  export_fuelcast_metrics.py  fetch_copernicus_data.py  fetch_era5_from_aws.py  setup_grafana_postgres.sh
tests/: test_maintenance.py  test_model.py
