[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marine-propeller-digital-twin"
version = "0.1.0"
description = "Prototype digital twin for marine propeller performance analytics"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
